--- a/fe/package.json
+++ b/fe/package.json
@@ -25,7 +25,8 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"vite": "^7.0.4",
+		"@types/jsonwebtoken": "^9.0.7"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
@@ -35,6 +36,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@types/node": "^24.2.1",
-		"lucide-svelte": "^0.539.0"
+		"lucide-svelte": "^0.539.0",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
